# pico_c

./: README.md
MCUME_pico_picodemo_VGA/: CMakeLists.txt  README.md
MCUME_pico_picodemo_VGA/config/: iopins.h  platform_config.h
MCUME_pico_picodemo_VGA/copy_to_sdcard/: cal.cfg
MCUME_pico_picodemo_VGA/copy_to_sdcard/800/: 3-D Tic-Tac-Toe.rom  Abracadabra.rom  Alf in the Color Caves.rom  Alien Ambush.rom  Alien Garden.rom  PolePosition.rom  Robotron.rom  pacman.rom
MCUME_pico_picodemo_VGA/lib/FatFs_SPI/: CMakeLists.txt
MCUME_pico_picodemo_VGA/lib/FatFs_SPI/ff14a/source/: ff.c
MCUME_pico_picodemo_VGA/lib/FatFs_SPI/sd_driver/: hw_config.c  sd_card.c  spi.c
MCUME_pico_picodemo_VGA/lib/sdcard/: sdcard.c  sdcard.cmake
MCUME_pico_picodemo_VGA/pico800/: atari800.c  atari800.h  emuapi.cpp  pico800.cpp
MCUME_pico_picodemo_VGA/picovga_t4/: VGA_t4.cpp  VGA_t4.h  include.h  vga.cpp  vga_config.h  vga_vmode.cpp  vga_vmode.h
MCUME_pico_picodemo_VGA/psram/: psram_t.cpp
MCUME_pico_picodemo_VGA/testvga/: testvga.cpp
MCUME_pico_picodemo_VGA/tft_t/: tft_t_dma.cpp
MCUME_pico_picodemo_VGA/vga_t4/: VGA_t4.cpp  VGA_t4.h  scanvideo.c  scanvideo.h  scanvideo_base.h
Pico-ResTouch-LCD-SDCard-2.8/: CMakeLists.txt
Pico-ResTouch-LCD-SDCard-2.8/examples/: lcd_test.c
Pico-ResTouch-LCD-SDCard-2.8/lib/lcd/: LCD_Bmp.c
helloworld/: CMakeLists.txt  main.c
picovga/: CMakeLists.txt  README.md  main.c  picovga.uf2
picovga/lib/fatfs/: ff.c  ffconf.h
picovga/lib/sdcard/: sdcard.c  sdcard.h
picovga/sdcard_test/: CMakeLists.txt  main.h  sdcard_test.c
